fix add campground button and search bar size on smaller devices

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,7 +1,21 @@
 body{
     background: #f2f2f2;
     font-family: 'Open Sans', sans-serif;
+    padding-top: 65px; 
   }
+
+a:hover{
+    text-decoration: none;
+}
+
+.jumbotron{
+    text-align: center;
+}
+
+.entry-form{
+    display: flex;
+    justify-content: center;
+}
   
 .search {
     width: 100%;
@@ -10,7 +24,7 @@ body{
   }
   
 .search-bar {
-    width: 450px;
+    max-width: 450px;
     height: 36px;
     border: 3px solid #696969;
     border-right: none;
@@ -18,6 +32,7 @@ body{
     border-radius: 5px 0 0 5px;
     outline: none;
     color: black;
+    width: 100%;
   }
   
 .search-bar:focus{
@@ -41,13 +56,8 @@ body{
     flex-flow: row wrap;
     align-items: center;
     justify-content: space-between;
-    margin-bottom: 20px
+    margin-bottom: 20px;
   }
-
-.add-campground{
-    height: 36px;
-    font-size: 1.5rem;
-}
 
 .thumbnail img {
     width: 100%;
@@ -76,4 +86,34 @@ body{
 #map{
     height: 400px;
     width: 100%;
+}
+
+#search-form {
+    max-width: 450px;
+    width: 100%;
+    position: relative;
+    display: flex;
+}
+
+#add-campground{
+    height: 36px;
+    font-size: 1.5rem;
+    border-radius: 30px;
+    letter-spacing: .2rem;
+}
+
+@media (max-width : 450px){
+    .thumbnail {
+        max-width: 280px;
+        width: 100%;
+    }
+
+    .camp-tiles{
+        justify-content: center;
+    }
+
+    #add-campground{
+        margin: 20px auto;
+        order: 2;
+    }
 }
